--- a/index.html
+++ b/index.html
@@ -63,38 +63,38 @@
         <div id="main-div">
 
 <div class="teaser lead">
-	<img src="images/hotel.jpg" alt="" >
-	<span>"Virtual Hotel Service Announced"</span>	
+	<img src="images/img7.jpg" alt="" >
+	<span>"Drivers Getting in Less Accidents"</span>	
 </div>
    
 <div class="teaser secondTop">
-	<img src="images/divorce.jpg" alt="" >
-	<span>"Declining Divorce Rates Suprise Researchers"</span>	
+	<img src="images/img1.jpg" alt="" >
+	<span>"Dennis Smith Says Changes Are Coming"</span>	
 </div>
    
 <div class="teaser secondBottom">
-	<img src="images/room2.jpg" alt="" >
-	<span>"Hotel Gets Facelift"</span>	
+	<img src="images/img2.jpg" alt="" >
+	<span>"Halloween Candy on the Decline"</span>	
 </div>
    
 <div class="teaser">
-	<img src="images/story1.jpg" alt="" >
-	<span class="span-2">"Roaring 20's Hotel Reopens"</span>	
+	<img src="images/img3.jpg" alt="" >
+	<span class="span-2">"Dogs are Living Longer"</span>	
 </div>
    
 <div class="teaser">
-	<img src="images/story2.jpg" alt="" >
-	<span class="span-2">"Auto Recall Stuns Owners"</span>	
+	<img src="images/img4.jpg" alt="" >
+	<span class="span-2">"New Jeeps Have Lots of Issues"</span>	
 </div>
 		
 <div class="teaser">
-	<img src="images/story3.jpg" alt="" >
-	<span class="span-2">"Politician Behind Bars"</span>	
+	<img src="images/img5.jpg" alt="" >
+	<span class="span-2">"New Study Says Eat More Fruit"</span>	
 </div>
 		
 <div class="teaser">
-	<img src="images/story4.jpg" alt="" >
-	<span class="span-2">"New WIFI in Airports"</span>	
+	<img src="images/img6.jpg" alt="" >
+	<span class="span-2">"More People Vacationing Here"</span>	
 </div>
             
             
